# qtlformer

./: .gitignore  Dockerfile  Makefile  README.md  main.nf  nextflow.config  nf-test.config
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
conf/: base.config  google-cloud-test.config  google-cloud.config  test.config
modules/: build-manifest.nf  load.nf  manifest.nf  transform.nf
testdata/: manifest.csv
testdata/study_index/QTD00001/: .part-00000-f576a242-190a-4f7d-b337-ac402cacc435-c000.snappy.parquet.crc  part-00000-f576a242-190a-4f7d-b337-ac402cacc435-c000.snappy.parquet
testdata/study_index/full/: .part-00000-9d669392-4cd4-459c-9f16-eb829207aeea-c000.snappy.parquet.crc  part-00000-9d669392-4cd4-459c-9f16-eb829207aeea-c000.snappy.parquet
testdata/study_locus/QTD000001/: .part-00000-0883b159-ddeb-4f03-8dcf-fe6ca689e351-c000.snappy.parquet.crc  part-00000-0883b159-ddeb-4f03-8dcf-fe6ca689e351-c000.snappy.parquet
testdata/study_locus/full/: .part-00000-0e182135-155f-4626-ac8b-a83c4b287777-c000.snappy.parquet.crc  part-00000-0e182135-155f-4626-ac8b-a83c4b287777-c000.snappy.parquet
testdata/susie/QTS000001/QTD000001/: QTD000001.lbf_variable.parquet
testdata/susie/QTS000001/QTD000002/: QTD000002.credible_sets.parquet
tests/: main.nf.test
tools/: entrez.py  pyproject.toml
tools/src/qtlformer/: __init__.py  load.py  manifest.py  study_index.py  study_locus.py  transform.py
tools/src/test/: conftest.py  test_commands.py
